# terval

./: .gitignore  README.md  pyproject.toml  test.ipynb  test.py
src/terval/: __init__.py
terval/: __init__.py  main.py
