[build-system]
requires = ["hatchling", "tabulate"]
build-backend = "hatchling.build"

[project]
name = "terval"
version = "0.0.1"
description = "The easiest way to measure performance"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/chemtrails/terval"
"Bug Tracker" = "https://github.com/chemtrails/terval/issues"